--- a/Крестики-нолики.html
+++ b/Крестики-нолики.html
@@ -7,7 +7,7 @@
     <title>Крестики-нолики</title>
     <style>
         body{
-background-image: url("file:///C:/Users/Николай/Pictures/Сайт%20слово/фон%20слово.jpg");}
+background-image: url("https://cdn.discordapp.com/attachments/707267975320961105/864827465884106762/8721b6145b3a5f0a.jpg");}
         .row{
             clear: both;
         }
