--- a/Крестики-нолики.html
+++ b/Крестики-нолики.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крестики-нолики</title>
     <style>
-        body{
-background-image: url("https://cdn.discordapp.com/attachments/707267975320961105/879670661025529856/13dafc848a966ace.jpg");}
         .row{
             clear: both;
         }
@@ -17,8 +15,7 @@ background-image: url("https://cdn.discordapp.com/attachments/707267975320961105
             height: 100px;
             width: 100px;
             float: left;
-            background-color: rgba(11, 230, 241, 0.837);
-            color: red;
+            color: black;
             text-align: center;
             font-size: 70px;
         }
